syntax = "proto3";
package belshare.belshare;

import "gogoproto/gogo.proto";
import "belshare/belshare/params.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "belShare/x/belshare/types";

// GenesisState defines the belshare module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
